fix(style): images in posts are not center aligned

--- a/_app/assets/_less/custom.less
+++ b/_app/assets/_less/custom.less
@@ -96,6 +96,7 @@ body {
     margin-right: auto;
   }
 
+  // Limit post content width
   .page-content,
   .post-content {
     max-width: 85%;
@@ -105,6 +106,13 @@ body {
 
     @media (max-width: 640px) {
       max-width: 100%;
+    }
+
+    // Center images in posts
+    img,
+    table {
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 
